load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)
load("@bazeldnf//:deps.bzl", "rpmtree")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

container_push(
    name = "push-forklift-virt-v2v",
    format = "Docker",
    image = ":forklift-virt-v2v",
    registry = "$${REGISTRY:-quay.io}",
    repository = "$${REGISTRY_ACCOUNT:-}$${REGISTRY_ACCOUNT:+/}forklift-virt-v2v",
    tag = "$${REGISTRY_TAG:-devel}",
)

pkg_tar(
    name = "appliance_layer",
    srcs = [
        "@libguestfs-appliance//appliance:README.fixed",
        "@libguestfs-appliance//appliance:initrd",
        "@libguestfs-appliance//appliance:kernel",
        "@libguestfs-appliance//appliance:root",
    ],
    mode = "0444",
    package_dir = "/usr/lib64/guestfs/appliance",
    visibility = ["//visibility:public"],
)

container_image(
    name = "virt-v2v-image",
    base = "@ubi9-minimal//image",
    directory = "/",
    tars = [
        ":virt-v2v",
        ":appliance_layer",
    ],
)

container_image(
    name = "forklift-virt-v2v",
    base = ":virt-v2v-image",
    directory = "/usr/local/bin/",
    empty_dirs = ["/disks"],
    entrypoint = ["/usr/local/bin/entrypoint"],
    env = {"LIBGUESTFS_BACKEND": "direct"},
    files = [
        "entrypoint",
        "@forklift//cmd/virt-v2v-monitor",
    ],
    user = "1001",
    visibility = ["//visibility:public"],
)

rpmtree(
    name = "virt-v2v",
    rpms = [
        "@acl-0__2.3.1-3.el9.x86_64//rpm",
        "@adobe-source-code-pro-fonts-0__2.030.1.050-12.el9.1.x86_64//rpm",
        "@alternatives-0__1.20-2.el9.x86_64//rpm",
        "@audit-libs-0__3.0.7-103.el9.x86_64//rpm",
        "@augeas-libs-0__1.13.0-5.el9.x86_64//rpm",
        "@basesystem-0__11-13.el9.x86_64//rpm",
        "@bash-0__5.1.8-6.el9.x86_64//rpm",
        "@bzip2-0__1.0.8-8.el9.x86_64//rpm",
        "@bzip2-libs-0__1.0.8-8.el9.x86_64//rpm",
        "@ca-certificates-0__2022.2.54-90.2.el9.x86_64//rpm",
        "@capstone-0__4.0.2-10.el9.x86_64//rpm",
        "@centos-gpg-keys-0__9.0-21.el9.x86_64//rpm",
        "@centos-stream-release-0__9.0-21.el9.x86_64//rpm",
        "@centos-stream-repos-0__9.0-21.el9.x86_64//rpm",
        "@coreutils-single-0__8.32-34.el9.x86_64//rpm",
        "@cpio-0__2.13-16.el9.x86_64//rpm",
        "@cracklib-0__2.9.6-27.el9.x86_64//rpm",
        "@cracklib-dicts-0__2.9.6-27.el9.x86_64//rpm",
        "@crypto-policies-0__20221215-1.git9a18988.el9.x86_64//rpm",
        "@cryptsetup-libs-0__2.6.0-2.el9.x86_64//rpm",
        "@curl-0__7.76.1-23.el9.x86_64//rpm",
        "@cyrus-sasl-0__2.1.27-21.el9.x86_64//rpm",
        "@cyrus-sasl-gssapi-0__2.1.27-21.el9.x86_64//rpm",
        "@cyrus-sasl-lib-0__2.1.27-21.el9.x86_64//rpm",
        "@daxctl-libs-0__71.1-8.el9.x86_64//rpm",
        "@dbus-1__1.12.20-7.el9.x86_64//rpm",
        "@dbus-broker-0__28-7.el9.x86_64//rpm",
        "@dbus-common-1__1.12.20-7.el9.x86_64//rpm",
        "@device-mapper-9__1.02.187-7.el9.x86_64//rpm",
        "@device-mapper-libs-9__1.02.187-7.el9.x86_64//rpm",
        "@diffutils-0__3.7-12.el9.x86_64//rpm",
        "@dmidecode-1__3.3-7.el9.x86_64//rpm",
        "@dracut-0__057-21.git20230214.el9.x86_64//rpm",
        "@dwz-0__0.14-3.el9.x86_64//rpm",
        "@e2fsprogs-libs-0__1.46.5-3.el9.x86_64//rpm",
        "@edk2-ovmf-0__20230301gitf80f052277c8-2.el9.x86_64//rpm",
        "@efi-srpm-macros-0__4-9.el9.x86_64//rpm",
        "@elfutils-libelf-0__0.189-2.el9.x86_64//rpm",
        "@expat-0__2.5.0-1.el9.x86_64//rpm",
        "@file-0__5.39-12.el9.x86_64//rpm",
        "@file-libs-0__5.39-12.el9.x86_64//rpm",
        "@filesystem-0__3.16-2.el9.x86_64//rpm",
        "@findutils-1__4.8.0-5.el9.x86_64//rpm",
        "@fonts-filesystem-1__2.0.5-7.el9.1.x86_64//rpm",
        "@fonts-srpm-macros-1__2.0.5-7.el9.1.x86_64//rpm",
        "@fuse-0__2.9.9-15.el9.x86_64//rpm",
        "@fuse-common-0__3.10.2-5.el9.x86_64//rpm",
        "@fuse-libs-0__2.9.9-15.el9.x86_64//rpm",
        "@gawk-0__5.1.0-6.el9.x86_64//rpm",
        "@gdbm-libs-1__1.19-4.el9.x86_64//rpm",
        "@gettext-0__0.21-7.el9.x86_64//rpm",
        "@gettext-libs-0__0.21-7.el9.x86_64//rpm",
        "@ghc-srpm-macros-0__1.5.0-6.el9.x86_64//rpm",
        "@glib-networking-0__2.68.3-3.el9.x86_64//rpm",
        "@glib2-0__2.68.4-6.el9.x86_64//rpm",
        "@glibc-0__2.34-66.el9.x86_64//rpm",
        "@glibc-common-0__2.34-66.el9.x86_64//rpm",
        "@glibc-langpack-en-0__2.34-66.el9.x86_64//rpm",
        "@gmp-1__6.2.0-10.el9.x86_64//rpm",
        "@gnupg2-0__2.3.3-2.el9.x86_64//rpm",
        "@gnutls-0__3.7.6-20.el9.x86_64//rpm",
        "@gnutls-dane-0__3.7.6-20.el9.x86_64//rpm",
        "@gnutls-utils-0__3.7.6-20.el9.x86_64//rpm",
        "@go-srpm-macros-0__3.0.9-9.el9.x86_64//rpm",
        "@grep-0__3.6-5.el9.x86_64//rpm",
        "@groff-base-0__1.22.4-10.el9.x86_64//rpm",
        "@gsettings-desktop-schemas-0__40.0-6.el9.x86_64//rpm",
        "@gssproxy-0__0.8.4-4.el9.x86_64//rpm",
        "@guestfs-tools-0__1.50.1-2.el9.x86_64//rpm",
        "@gzip-0__1.12-1.el9.x86_64//rpm",
        "@hexedit-0__1.6-1.el9.x86_64//rpm",
        "@hivex-libs-0__1.3.21-3.el9.x86_64//rpm",
        "@hwdata-0__0.348-9.9.el9.x86_64//rpm",
        "@inih-0__49-6.el9.x86_64//rpm",
        "@iproute-0__6.2.0-1.el9.x86_64//rpm",
        "@iproute-tc-0__6.2.0-1.el9.x86_64//rpm",
        "@iptables-libs-0__1.8.8-6.el9.x86_64//rpm",
        "@ipxe-roms-qemu-0__20200823-9.git4bd064de.el9.x86_64//rpm",
        "@jansson-0__2.14-1.el9.x86_64//rpm",
        "@json-c-0__0.14-11.el9.x86_64//rpm",
        "@json-glib-0__1.6.6-1.el9.x86_64//rpm",
        "@kbd-0__2.4.0-8.el9.x86_64//rpm",
        "@kbd-misc-0__2.4.0-8.el9.x86_64//rpm",
        "@kernel-core-0__5.14.0-305.el9.x86_64//rpm",
        "@kernel-modules-core-0__5.14.0-305.el9.x86_64//rpm",
        "@kernel-srpm-macros-0__1.0-12.el9.x86_64//rpm",
        "@keyutils-0__1.6.3-1.el9.x86_64//rpm",
        "@keyutils-libs-0__1.6.3-1.el9.x86_64//rpm",
        "@kmod-0__28-8.el9.x86_64//rpm",
        "@kmod-libs-0__28-8.el9.x86_64//rpm",
        "@kpartx-0__0.8.7-21.el9.x86_64//rpm",
        "@krb5-libs-0__1.20.1-8.el9.x86_64//rpm",
        "@less-0__590-1.el9.x86_64//rpm",
        "@libacl-0__2.3.1-3.el9.x86_64//rpm",
        "@libaio-0__0.3.111-13.el9.x86_64//rpm",
        "@libarchive-0__3.5.3-4.el9.x86_64//rpm",
        "@libassuan-0__2.5.5-3.el9.x86_64//rpm",
        "@libattr-0__2.5.1-3.el9.x86_64//rpm",
        "@libbasicobjects-0__0.1.1-53.el9.x86_64//rpm",
        "@libblkid-0__2.37.4-10.el9.x86_64//rpm",
        "@libbpf-2__1.1.0-1.el9.x86_64//rpm",
        "@libbrotli-0__1.0.9-6.el9.x86_64//rpm",
        "@libcap-0__2.48-8.el9.x86_64//rpm",
        "@libcap-ng-0__0.8.2-7.el9.x86_64//rpm",
        "@libcbor-0__0.7.0-5.el9.x86_64//rpm",
        "@libcollection-0__0.7.0-53.el9.x86_64//rpm",
        "@libcom_err-0__1.46.5-3.el9.x86_64//rpm",
        "@libconfig-0__1.7.2-9.el9.x86_64//rpm",
        "@libcurl-minimal-0__7.76.1-23.el9.x86_64//rpm",
        "@libdb-0__5.3.28-53.el9.x86_64//rpm",
        "@libeconf-0__0.4.1-2.el9.x86_64//rpm",
        "@libedit-0__3.1-37.20210216cvs.el9.x86_64//rpm",
        "@libev-0__4.33-5.el9.x86_64//rpm",
        "@libevent-0__2.1.12-6.el9.x86_64//rpm",
        "@libfdisk-0__2.37.4-10.el9.x86_64//rpm",
        "@libfdt-0__1.6.0-7.el9.x86_64//rpm",
        "@libffi-0__3.4.2-8.el9.x86_64//rpm",
        "@libfido2-0__1.13.0-1.el9.x86_64//rpm",
        "@libgcc-0__11.3.1-4.4.el9.x86_64//rpm",
        "@libgcrypt-0__1.10.0-10.el9.x86_64//rpm",
        "@libgomp-0__11.3.1-4.4.el9.x86_64//rpm",
        "@libgpg-error-0__1.42-5.el9.x86_64//rpm",
        "@libguestfs-1__1.50.1-3.el9.x86_64//rpm",
        "@libguestfs-winsupport-0__9.2-1.el9.x86_64//rpm",
        "@libguestfs-xfs-1__1.50.1-3.el9.x86_64//rpm",
        "@libibverbs-0__44.0-2.el9.x86_64//rpm",
        "@libidn2-0__2.3.0-7.el9.x86_64//rpm",
        "@libini_config-0__1.3.1-53.el9.x86_64//rpm",
        "@libkcapi-0__1.3.1-3.el9.x86_64//rpm",
        "@libkcapi-hmaccalc-0__1.3.1-3.el9.x86_64//rpm",
        "@libksba-0__1.5.1-6.el9.x86_64//rpm",
        "@libmnl-0__1.0.4-15.el9.x86_64//rpm",
        "@libmount-0__2.37.4-10.el9.x86_64//rpm",
        "@libnbd-0__1.14.2-1.el9.x86_64//rpm",
        "@libnetfilter_conntrack-0__1.0.9-1.el9.x86_64//rpm",
        "@libnfnetlink-0__1.0.1-21.el9.x86_64//rpm",
        "@libnfsidmap-1__2.5.4-18.el9.x86_64//rpm",
        "@libnghttp2-0__1.43.0-5.el9.x86_64//rpm",
        "@libnl3-0__3.7.0-1.el9.x86_64//rpm",
        "@libosinfo-0__1.10.0-1.el9.x86_64//rpm",
        "@libpath_utils-0__0.2.1-53.el9.x86_64//rpm",
        "@libpcap-14__1.10.0-4.el9.x86_64//rpm",
        "@libpipeline-0__1.5.3-4.el9.x86_64//rpm",
        "@libpkgconf-0__1.7.3-10.el9.x86_64//rpm",
        "@libpmem-0__1.12.1-1.el9.x86_64//rpm",
        "@libpng-2__1.6.37-12.el9.x86_64//rpm",
        "@libproxy-0__0.4.15-35.el9.x86_64//rpm",
        "@libpsl-0__0.21.1-5.el9.x86_64//rpm",
        "@libpwquality-0__1.4.4-8.el9.x86_64//rpm",
        "@librdmacm-0__44.0-2.el9.x86_64//rpm",
        "@libref_array-0__0.1.5-53.el9.x86_64//rpm",
        "@libseccomp-0__2.5.2-2.el9.x86_64//rpm",
        "@libselinux-0__3.5-1.el9.x86_64//rpm",
        "@libselinux-utils-0__3.5-1.el9.x86_64//rpm",
        "@libsemanage-0__3.5-2.el9.x86_64//rpm",
        "@libsepol-0__3.5-1.el9.x86_64//rpm",
        "@libsigsegv-0__2.13-4.el9.x86_64//rpm",
        "@libslirp-0__4.4.0-7.el9.x86_64//rpm",
        "@libsmartcols-0__2.37.4-10.el9.x86_64//rpm",
        "@libsoup-0__2.72.0-8.el9.x86_64//rpm",
        "@libssh-0__0.10.4-8.el9.x86_64//rpm",
        "@libssh-config-0__0.10.4-8.el9.x86_64//rpm",
        "@libstdc__plus____plus__-0__11.3.1-4.4.el9.x86_64//rpm",
        "@libtasn1-0__4.16.0-8.el9.x86_64//rpm",
        "@libtirpc-0__1.3.3-1.el9.x86_64//rpm",
        "@libtpms-0__0.9.1-3.20211126git1ff6fe1f43.el9.x86_64//rpm",
        "@libunistring-0__0.9.10-15.el9.x86_64//rpm",
        "@libusbx-0__1.0.26-1.el9.x86_64//rpm",
        "@libutempter-0__1.2.1-6.el9.x86_64//rpm",
        "@libuuid-0__2.37.4-10.el9.x86_64//rpm",
        "@libverto-0__0.3.2-3.el9.x86_64//rpm",
        "@libverto-libev-0__0.3.2-3.el9.x86_64//rpm",
        "@libvirt-client-0__9.0.0-7.el9.x86_64//rpm",
        "@libvirt-daemon-0__9.0.0-7.el9.x86_64//rpm",
        "@libvirt-daemon-driver-qemu-0__9.0.0-7.el9.x86_64//rpm",
        "@libvirt-daemon-driver-secret-0__9.0.0-7.el9.x86_64//rpm",
        "@libvirt-daemon-driver-storage-core-0__9.0.0-7.el9.x86_64//rpm",
        "@libvirt-libs-0__9.0.0-7.el9.x86_64//rpm",
        "@libxcrypt-0__4.4.18-3.el9.x86_64//rpm",
        "@libxcrypt-compat-0__4.4.18-3.el9.x86_64//rpm",
        "@libxml2-0__2.9.13-3.el9.x86_64//rpm",
        "@libxslt-0__1.1.34-9.el9.x86_64//rpm",
        "@libzstd-0__1.5.1-2.el9.x86_64//rpm",
        "@lua-libs-0__5.4.4-4.el9.x86_64//rpm",
        "@lua-srpm-macros-0__1-6.el9.x86_64//rpm",
        "@lz4-libs-0__1.9.3-5.el9.x86_64//rpm",
        "@lzo-0__2.10-7.el9.x86_64//rpm",
        "@lzop-0__1.04-8.el9.x86_64//rpm",
        "@man-db-0__2.9.3-7.el9.x86_64//rpm",
        "@mingw-filesystem-base-0__139-1.el9.x86_64//rpm",
        "@mingw32-crt-0__10.0.0-3.el9.x86_64//rpm",
        "@mingw32-filesystem-0__139-1.el9.x86_64//rpm",
        "@mingw32-srvany-0__1.1-3.el9.x86_64//rpm",
        "@mpfr-0__4.1.0-7.el9.x86_64//rpm",
        "@nbdkit-basic-filters-0__1.34.1-1.el9.x86_64//rpm",
        "@nbdkit-basic-plugins-0__1.34.1-1.el9.x86_64//rpm",
        "@nbdkit-curl-plugin-0__1.34.1-1.el9.x86_64//rpm",
        "@nbdkit-nbd-plugin-0__1.34.1-1.el9.x86_64//rpm",
        "@nbdkit-server-0__1.34.1-1.el9.x86_64//rpm",
        "@nbdkit-ssh-plugin-0__1.34.1-1.el9.x86_64//rpm",
        "@nbdkit-vddk-plugin-0__1.34.1-1.el9.x86_64//rpm",
        "@ncurses-0__6.2-8.20210508.el9.x86_64//rpm",
        "@ncurses-base-0__6.2-8.20210508.el9.x86_64//rpm",
        "@ncurses-libs-0__6.2-8.20210508.el9.x86_64//rpm",
        "@ndctl-libs-0__71.1-8.el9.x86_64//rpm",
        "@nettle-0__3.8-3.el9.x86_64//rpm",
        "@nfs-utils-1__2.5.4-18.el9.x86_64//rpm",
        "@npth-0__1.6-8.el9.x86_64//rpm",
        "@numactl-libs-0__2.0.14-7.el9.x86_64//rpm",
        "@numad-0__0.5-36.20150602git.el9.x86_64//rpm",
        "@ocaml-srpm-macros-0__6-6.el9.x86_64//rpm",
        "@openblas-srpm-macros-0__2-11.el9.x86_64//rpm",
        "@openldap-0__2.6.2-3.el9.x86_64//rpm",
        "@openssh-0__8.7p1-28.el9.x86_64//rpm",
        "@openssh-clients-0__8.7p1-28.el9.x86_64//rpm",
        "@openssl-1__3.0.7-6.el9.x86_64//rpm",
        "@openssl-libs-1__3.0.7-6.el9.x86_64//rpm",
        "@osinfo-db-0__20221130-1.el9.x86_64//rpm",
        "@osinfo-db-tools-0__1.10.0-1.el9.x86_64//rpm",
        "@p11-kit-0__0.24.1-2.el9.x86_64//rpm",
        "@p11-kit-trust-0__0.24.1-2.el9.x86_64//rpm",
        "@pam-0__1.5.1-14.el9.x86_64//rpm",
        "@parted-0__3.5-2.el9.x86_64//rpm",
        "@pcre-0__8.44-3.el9.3.x86_64//rpm",
        "@pcre2-0__10.40-2.el9.x86_64//rpm",
        "@pcre2-syntax-0__10.40-2.el9.x86_64//rpm",
        "@perl-Carp-0__1.50-460.el9.x86_64//rpm",
        "@perl-Class-Struct-0__0.66-480.el9.x86_64//rpm",
        "@perl-Encode-4__3.08-462.el9.x86_64//rpm",
        "@perl-Errno-0__1.30-480.el9.x86_64//rpm",
        "@perl-Exporter-0__5.74-461.el9.x86_64//rpm",
        "@perl-Fcntl-0__1.13-480.el9.x86_64//rpm",
        "@perl-File-Basename-0__2.85-480.el9.x86_64//rpm",
        "@perl-File-Path-0__2.18-4.el9.x86_64//rpm",
        "@perl-File-Temp-1__0.231.100-4.el9.x86_64//rpm",
        "@perl-File-stat-0__1.09-480.el9.x86_64//rpm",
        "@perl-Getopt-Long-1__2.52-4.el9.x86_64//rpm",
        "@perl-Getopt-Std-0__1.12-480.el9.x86_64//rpm",
        "@perl-HTTP-Tiny-0__0.076-460.el9.x86_64//rpm",
        "@perl-IO-0__1.43-480.el9.x86_64//rpm",
        "@perl-IPC-Open3-0__1.21-480.el9.x86_64//rpm",
        "@perl-MIME-Base64-0__3.16-4.el9.x86_64//rpm",
        "@perl-POSIX-0__1.94-480.el9.x86_64//rpm",
        "@perl-PathTools-0__3.78-461.el9.x86_64//rpm",
        "@perl-Pod-Escapes-1__1.07-460.el9.x86_64//rpm",
        "@perl-Pod-Perldoc-0__3.28.01-461.el9.x86_64//rpm",
        "@perl-Pod-Simple-1__3.42-4.el9.x86_64//rpm",
        "@perl-Pod-Usage-4__2.01-4.el9.x86_64//rpm",
        "@perl-Scalar-List-Utils-4__1.56-461.el9.x86_64//rpm",
        "@perl-SelectSaver-0__1.02-480.el9.x86_64//rpm",
        "@perl-Socket-4__2.031-4.el9.x86_64//rpm",
        "@perl-Storable-1__3.21-460.el9.x86_64//rpm",
        "@perl-Symbol-0__1.08-480.el9.x86_64//rpm",
        "@perl-Term-ANSIColor-0__5.01-461.el9.x86_64//rpm",
        "@perl-Term-Cap-0__1.17-460.el9.x86_64//rpm",
        "@perl-Text-ParseWords-0__3.30-460.el9.x86_64//rpm",
        "@perl-Text-Tabs__plus__Wrap-0__2013.0523-460.el9.x86_64//rpm",
        "@perl-Time-Local-2__1.300-7.el9.x86_64//rpm",
        "@perl-constant-0__1.33-461.el9.x86_64//rpm",
        "@perl-if-0__0.60.800-480.el9.x86_64//rpm",
        "@perl-interpreter-4__5.32.1-480.el9.x86_64//rpm",
        "@perl-libs-4__5.32.1-480.el9.x86_64//rpm",
        "@perl-mro-0__1.23-480.el9.x86_64//rpm",
        "@perl-overload-0__1.31-480.el9.x86_64//rpm",
        "@perl-overloading-0__0.02-480.el9.x86_64//rpm",
        "@perl-parent-1__0.238-460.el9.x86_64//rpm",
        "@perl-podlators-1__4.14-460.el9.x86_64//rpm",
        "@perl-srpm-macros-0__1-41.el9.x86_64//rpm",
        "@perl-subs-0__1.03-480.el9.x86_64//rpm",
        "@perl-vars-0__1.05-480.el9.x86_64//rpm",
        "@pigz-0__2.5-4.el9.x86_64//rpm",
        "@pixman-0__0.40.0-5.el9.x86_64//rpm",
        "@pkgconf-0__1.7.3-10.el9.x86_64//rpm",
        "@policycoreutils-0__3.5-1.el9.x86_64//rpm",
        "@polkit-0__0.117-11.el9.x86_64//rpm",
        "@polkit-libs-0__0.117-11.el9.x86_64//rpm",
        "@polkit-pkla-compat-0__0.1-21.el9.x86_64//rpm",
        "@popt-0__1.18-8.el9.x86_64//rpm",
        "@procps-ng-0__3.3.17-11.el9.x86_64//rpm",
        "@protobuf-c-0__1.3.3-12.el9.x86_64//rpm",
        "@psmisc-0__23.4-3.el9.x86_64//rpm",
        "@publicsuffix-list-dafsa-0__20210518-3.el9.x86_64//rpm",
        "@pyproject-srpm-macros-0__1.6.2-1.el9.x86_64//rpm",
        "@qemu-img-17__8.0.0-1.el9.x86_64//rpm",
        "@qemu-kvm-common-17__8.0.0-1.el9.x86_64//rpm",
        "@qemu-kvm-core-17__8.0.0-1.el9.x86_64//rpm",
        "@qt5-srpm-macros-0__5.15.9-1.el9.x86_64//rpm",
        "@quota-1__4.06-6.el9.x86_64//rpm",
        "@quota-nls-1__4.06-6.el9.x86_64//rpm",
        "@readline-0__8.1-4.el9.x86_64//rpm",
        "@redhat-rpm-config-0__199-1.el9.x86_64//rpm",
        "@rpcbind-0__1.2.6-5.el9.x86_64//rpm",
        "@rpm-0__4.16.1.3-22.el9.x86_64//rpm",
        "@rpm-libs-0__4.16.1.3-22.el9.x86_64//rpm",
        "@rpm-plugin-selinux-0__4.16.1.3-22.el9.x86_64//rpm",
        "@rust-srpm-macros-0__17-4.el9.x86_64//rpm",
        "@seabios-bin-0__1.16.1-1.el9.x86_64//rpm",
        "@seavgabios-bin-0__1.16.1-1.el9.x86_64//rpm",
        "@sed-0__4.8-9.el9.x86_64//rpm",
        "@selinux-policy-0__38.1.12-1.el9.x86_64//rpm",
        "@selinux-policy-targeted-0__38.1.12-1.el9.x86_64//rpm",
        "@setup-0__2.13.7-9.el9.x86_64//rpm",
        "@shadow-utils-2__4.9-6.el9.x86_64//rpm",
        "@snappy-0__1.1.8-8.el9.x86_64//rpm",
        "@sqlite-libs-0__3.34.1-6.el9.x86_64//rpm",
        "@swtpm-0__0.8.0-1.el9.x86_64//rpm",
        "@swtpm-libs-0__0.8.0-1.el9.x86_64//rpm",
        "@swtpm-tools-0__0.8.0-1.el9.x86_64//rpm",
        "@systemd-0__252-8.el9.x86_64//rpm",
        "@systemd-container-0__252-8.el9.x86_64//rpm",
        "@systemd-libs-0__252-8.el9.x86_64//rpm",
        "@systemd-pam-0__252-8.el9.x86_64//rpm",
        "@systemd-rpm-macros-0__252-8.el9.x86_64//rpm",
        "@systemd-udev-0__252-8.el9.x86_64//rpm",
        "@tar-2__1.34-6.el9.x86_64//rpm",
        "@tpm2-tss-0__3.0.3-8.el9.x86_64//rpm",
        "@tzdata-0__2023c-1.el9.x86_64//rpm",
        "@unbound-libs-0__1.16.2-3.el9.x86_64//rpm",
        "@unzip-0__6.0-56.el9.x86_64//rpm",
        "@userspace-rcu-0__0.12.1-6.el9.x86_64//rpm",
        "@util-linux-0__2.37.4-10.el9.x86_64//rpm",
        "@util-linux-core-0__2.37.4-10.el9.x86_64//rpm",
        "@vim-minimal-2__8.2.2637-20.el9.x86_64//rpm",
        "@virt-v2v-1__2.3.4-1.el9.x86_64//rpm",
        "@virtio-win-0__1.9.15-4.el9.x86_64//rpm",
        "@which-0__2.21-29.el9.x86_64//rpm",
        "@xfsprogs-0__5.19.0-1.el9.x86_64//rpm",
        "@xz-0__5.2.5-8.el9.x86_64//rpm",
        "@xz-libs-0__5.2.5-8.el9.x86_64//rpm",
        "@yajl-0__2.1.0-21.el9.x86_64//rpm",
        "@zip-0__3.0-35.el9.x86_64//rpm",
        "@zlib-0__1.2.11-39.el9.x86_64//rpm",
    ],
    visibility = ["//visibility:public"],
)
